--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "tailwindcss": "^1.1.3"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "svelidation": "^1.3.2"
   },
   "scripts": {
     "build": "rollup -c",
